# WasmJieba

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  package.dummy.json  package.nodejs.json  package.sh  package.web.json
.cargo/: config.toml
.github/workflows/: publish.yml
assets/ime_dicts/: 140.ime.hant
examples/build-dict/: Cargo.toml  builder.py
examples/build-dict/2.dicts/: 110.ime.hans  520.ime.hans  520.ime.hant  52040.ime.hans  52040.ime.hant
examples/build-dict/3.dicts/: 110.ime.hans  110.ime.hant  140.ime.hans  140.ime.hant  520.ime.hans  520.ime.hant  52040.ime.hans  52040.ime.hant
examples/build-dict/dicts/: 110.ime.hans  110.ime.hant  140.ime.hans  140.ime.hant  520.ime.hans  520.ime.hant  52040.ime.hans  52040.ime.hant
examples/build-dict/src/: main.rs
examples/web/: custom.dict.js  index.html
pkg/: package.json  package.nodejs.json  package.web.json
ref/: 通用规范汉字表.docx
src/: dicts  lib.rs
src/dicts/: 110.ime.hant  140.ime.hans  140.ime.hant  2.dicts
tests/: test.rs
