[package]
name = "wasmjieba"
version = "1.0.3"
authors = ["Luna Yao <me+github@zznq.buzz>"]
edition = "2021"
description = "A WASM binding to jieba-rs."
repository = "https://github.com/ZnqbuZ/WasmJieba"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
jieba-rs = { path = "jieba-rs", features = ["tfidf", "textrank"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"

[workspace]
members = [
    ".",
    "jieba-rs",
    "jieba-rs/capi",
    "jieba-rs/examples/weicheng"
]
