[package]
name = "wasmjieba"
version = "1.0.15"
authors = ["Luna Yao <40349250+ZnqbuZ@users.noreply.github.com>"]
edition = "2024"
description = "A WASM binding to jieba-rs."
repository = "https://github.com/ZnqbuZ/WasmJieba"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build-dependencies]
zstd = "0.*"

[dependencies]
log = {workspace = true}
jieba-rs = { workspace = true, features = ["default-dict", "tfidf", "textrank"]}
serde = { version = "1.*", features = ["derive"] }
serde_json = "1.*"
serde-wasm-bindgen = "0.*"
wasm-bindgen = "0.*"
zstd = "0.*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.*", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.*"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3

[workspace]
members = [
    ".",
    "examples/build-dict"
]

[workspace.dependencies]
env_logger = "0.*"
log = "0.*"
jieba-rs = "0.*"

[patch.crates-io]
jieba-rs = { git = "https://github.com/ZnqbuZ/jieba-rs.git", branch = "wasm" }
