[package]
name = "build_dict"
version = "0.1.0"
edition = "2021"
description = "This example is used for building jieba compatible dict from ordinary IME dict files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
wasmjieba = { path = "../.." }