[package]
name = "build_dict"
version = "0.1.1"
edition = "2024"
description = "This example is used for building jieba compatible dict from ordinary IME dict files."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
jieba-rs = { workspace = true }
#wasmjieba = { path = "../.." }